--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,6 +2,9 @@
     <string name="app_name">青龙京东</string>
     <string name="action_upload_jd_cookie">上传Cookie到青龙</string>
     <string name="qinglong_login_name">配置青龙</string>
+
+    <string name="btn_setting">设置</string>
+
     <string name="ql_ak_name">青龙ClientID</string>
     <string name="ql_sk_name">青龙ClientSecret</string>
     <string name="prompt_url">青龙地址,形如 http://127.0.0.1:5700</string>
@@ -17,4 +20,20 @@
 
 
     <string name="action_clear_webview">清除本地Cookie</string>
+    <string name="title_activity_settings">SettingsActivity</string>
+
+    <!-- Preference Titles -->
+    <string name="settings_ql_header">青龙配置</string>
+
+    <!--  Preferences -->
+    <string name="settings_ql_url">URL</string>
+    <string name="settings_ql_cid">Client ID</string>
+    <string name="settings_ql_csk">Client Secret</string>
+
+    <!-- Sync Preferences -->
+    <string name="sync_title">Sync email periodically</string>
+    <string name="attachment_title">Download incoming attachments</string>
+    <string name="attachment_summary_on">Automatically download attachments for incoming emails
+    </string>
+    <string name="attachment_summary_off">Only download attachments when manually requested</string>
 </resources>
